backend/src/hosting/k8s_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: orma-playground
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            nodeSelector:
                kubernetes.io/hostname: ns5042800
            containers:
                - name: backend
                  image: registry.no3rd.com/orma-playground-backend:latest
                  ports:
                      - containerPort: 3001
                  resources:
                      limits:
                          memory: '512Mi'
                          cpu: '500m'
                      requests:
                          memory: '256Mi'
                          cpu: '100m'
                  readinessProbe:
                      httpGet:
                          path: /health
                          port: 3001
                      initialDelaySeconds: 5
                      periodSeconds: 10
            imagePullSecrets:
                - name: private-registry
            restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: orma-playground
spec:
    ports:
        - port: 3001
          targetPort: 3001
    selector:
        app: backend
